--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                 this.teams = [
                     'الكوست', 'سعود', 'دارك', 'ياسر', 
                     'ابو عبدالله', 'لوبو', 'ابو خلود', 'عزيز',
-                    'نهار', 'بندر', 'عزوز الفهيد', 'نواف'
+                    'نهار', 'ابو عابد', 'عزوز الفهيد', 'نواف'
                 ];
                 
                 // Generate 11 rounds of matches
@@ -902,4 +902,5 @@
     </script>
 </body>
 </html>
+
 
